# ANHD-NeuroFabric-Cognitive-Framework

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  WHITEPAPER.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: my-agent.agent.md
.github/workflows/: README.md  deploy-nextjs.yml
demo/: .gitignore  BACKEND_COMPLETE.md  README.md  STRUCTURE.md
demo/backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start.sh
demo/backend/app/: __init__.py  main.py
demo/backend/app/agents/: __init__.py  analyst.py  base_agent.py  coordinator.py  specialist_math.py  specialist_text.py  super_critic.py
demo/backend/app/core/: __init__.py  config.py  logger.py
demo/backend/app/models/: __init__.py  message.py  metrics.py  task.py
demo/backend/app/routers/: __init__.py  tasks.py
demo/backend/app/services/: __init__.py  llm_service.py  memory_manager.py  orchestrator.py
demo/neurofabric-ui/: DEMO_GUIDE.md  NEXT_STEPS.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
demo/neurofabric-ui/app/: layout.tsx  page.tsx
demo/neurofabric-ui/components/: DisclaimerModal.tsx  MemoryViewer.tsx
demo/neurofabric-ui/lib/: constants.ts  export.ts  types.ts
demo/neurofabric-ui/store/: useSessionStore.ts
demo/python-multi-agent/: .env.example  README.md  config.yaml  main.py  requirements.txt
demo/python-multi-agent/agents/: analyst.py  coordinator.py  specialist_math.py  (+2 more)
(+14 files in other folders)
