[tool.poetry]
name = "neurofabric-backend"
version = "0.1.0"
description = "Multi-agent cognitive framework backend"
authors = ["Andy H. Nguyen <nguyenhieuducan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
openai = "^1.12.0"
anthropic = "^0.18.0"
python-dotenv = "^1.0.0"
sse-starlette = "^2.0.0"
httpx = "^0.26.0"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
black = "^24.1.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
